--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,2 +1,19 @@
 inherit_from:
   - https://raw.githubusercontent.com/marcandre/defaults/master/.rubocop.yml
+
+# Transfer:
+Style/EmptyCaseCondition:
+  Enabled: false
+
+Style/DoubleNegation:
+  Enabled: false
+
+Style/Lambda:
+  EnforcedStyle: literal
+
+Style/Alias:
+  EnforcedStyle: prefer_alias_method
+
+# Local
+Lint/ShadowingOuterLocalVariable:
+  Enabled: false # See https://github.com/rubocop-hq/rubocop/issues/9080
